2010-08-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: skip -Wall -Werror with Tru64 cc in cwrapper test.
	* tests/cwrapper.at (cwrapper for uninstalled executables):
	Use a link test rather than a compile test to flesh out unknown
	compiler flags starting with -W; Tru64/OSF1 cc will happily
	accept `-Wall -Werror' as indication to pass flags on to
	subprocesses.

	tests: avoid getopt-m4sh failures when autom4te is not available.
	* tests/getopt-m4sh.at (_LT_AT_GETOPT_M4SH_SETUP):
	Check $M4SH --version, skip on failure.

	tests: mark 'syntax of .la files' as XFAIL, expose failure.
	* tests/lalib-syntax.at (syntax of .la files): Assert that the
	string returned by lt_dlerror after a failure is non-NULL, so
	the failure shows up on systems other than Solaris.  Mark test
	as expected to fail.
	Suggested by Bob Friesenhahn.

2010-08-30  Eric Blake  <eblake@redhat.com>

	Simplify recent configure quoting portability workaround.
	* configure.ac: Simplify setting of timestamp_string.

2010-08-30  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Update path conversion warning messages
	* libltdl/config/ltmain.m4sh (func_convert_file_check): Update
	comments and warning message.
	(func_convert_path_check): Update warning message.

2010-08-29  Peter Rosin  <peda@lysator.liu.se>

	Fix typo when renaming path conversion functions.
	* tests/testsuite.at: Ensure to_host_file_cmd is passed as a
	variable setting on the configure line for (new testsuite) tests.

2010-08-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Work around yet another shell quoting portability issue.
	* configure.ac: Avoid nonportable quoted alternate variable
	value in unquoted here document, so Solaris 10 sh and Tru64
	ksh do not print spurious extra quotes.

	Silence order-only configure test for AIX make.
	* configure.ac: Also drop standard output, for AIX 5.1 make.

2010-08-28  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Minor sysroot fixups.